# osmia-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml  build_and_test.yaml
src/: _osmia  constants.rs  main.rs  utils.rs
src/macros/: macro_tests.rs
src/tests/: mod.rs  models.rs  utils.rs
src/tests/data/: data.json
